--- a/apps/client/app/globals.css
+++ b/apps/client/app/globals.css
@@ -20,13 +20,63 @@
 }
 
 @layer base {
-  *,
-  body {
+  * {
     @apply m-0 box-border p-0;
+  }
+
+  body {
+    @apply min-h-screen overflow-x-hidden overflow-y-scroll;
   }
 
   /* header buttons */
   .btnHeader {
     @apply hover:bg-primary hover:text-secondary text-primary border-secondary rounded-full border;
+  }
+
+  /* pre-loader in lauout.tsx */
+
+  .loader {
+    width: 48px;
+    height: 48px;
+    border: 3px solid #fff;
+    border-radius: 50%;
+    display: inline-block;
+    position: relative;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+  }
+  .loader::after {
+    content: '';
+    box-sizing: border-box;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 3px solid;
+    border-color: #ff3d00 transparent;
+  }
+
+  @keyframes rotation {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+  .progress-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 5px;
+    border: 10px;
+    background: #b65f97;
+    transform-origin: 0%;
+    z-index: 11;
   }
 }
