--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -45,7 +45,7 @@
     animation: rotation 1s linear infinite;
   }
   .loader::after {
-    content: '';
+    content: "";
     box-sizing: border-box;
     position: absolute;
     left: 50%;
@@ -82,11 +82,8 @@
 
   /* shadow used for most of site */
   .card {
-    /* From https://css.glass */
-    background: rgba(255, 255, 255, 0);
     border-radius: 16px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    border: 1px solid rgba(255, 255, 255, 0.27);
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
   }
 
   /* active link in dashboard (profile section) */
@@ -111,6 +108,6 @@
 
   /* dashboard sidenav shadow */
   .sideNavShadow {
-    box-shadow: -20px 0px 20px -25px rgba(0, 0, 0, 0.45);
+    box-shadow: -20px 0px 20px -25px rgba(0, 0, 0, 0.2);
   }
 }
