--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -11,10 +11,10 @@
     --accent-color: #b2dfdb;
   }
   .dark {
-    --background: #000000;
+    --background: #1b1831;
     --primary-color: #b65f97;
-    --secondary-color: #f0f4c3;
-    --text-color: #ffe0e0;
+    --secondary-color: #707070;
+    --text-color: #707070;
     --accent-color: #b2dfdb;
   }
 }
@@ -109,5 +109,9 @@
   /* dashboard sidenav shadow */
   .sideNavShadow {
     box-shadow: -20px 0px 20px -25px rgba(0, 0, 0, 0.2);
+  }
+
+  .hover-button {
+    @apply border border-primary bg-textColor text-[#000] duration-200 hover:bg-primary hover:text-[#fff];
   }
 }
